# Efficient-RNN

./: .gitignore  CODING_STANDARDS.md  CTRNN.py  README.md  ctrnn.pt  my_ctrnn.pth  noise_prune.py  pyproject.toml  requirements.txt  results.csv
.matplotlib_cache/: fontlist-v330.json  fontlist-v390.json
analysis/: explain_pruning_analysis.ipynb
checkpoints/: multirule_fullsweep_seed0.pt  multirule_fullsweep_seed1.pt  multirule_fullsweep_seed2.pt  multirule_init_seed0.pt  multirule_init_seed1.pt  multirule_init_seed2.pt  multirule_post_baseline.pt  multirule_post_seed0.pt  multirule_post_seed1.pt  multirule_post_seed2.pt  perceptualdm_micro_seed0.pt  synth_context_seed0.pt
configs/: baseline_synthetic_multirule_10seed_ablation_suite.json  ddms_ctrnn.json  delaymatch_pruning_dale.json  delaymatch_pruning_final.json  delaymatch_pruning_hard.json  example_suite.json  go_full_pruners.json  hard_pruning_neurogym.json  mmi_ctrnn.json  mmi_dale.json  modcog_all_baselines_1000.json  modcog_ctx_dlydm_all_ctrnn_a5_3seed.json  modcog_ctx_dlydm_all_ctrnn_a5_seed0.json  modcog_ctx_dlydm_prune_suite_gru.json  modcog_ctx_dlydm_prune_suite_lstm.json  modcog_ctx_dlydm_random10_rnn_suite.json  modcog_ctx_dlydm_random10_suite.json  modcog_ctx_dlydm_random10_suite_5000.json  modcog_ctx_dlydm_random5_ctrnn_3000.json  modcog_ctx_dlydm_random5_ctrnn_6000.json  modcog_ctx_dlydm_random5_ctrnn_a1.json  modcog_ctx_dlydm_random5_ctrnn_a2.json  modcog_ctx_dlydm_random5_ctrnn_a3.json  modcog_ctx_dlydm_random5_ctrnn_a4.json  modcog_ctx_dlydm_random5_ctrnn_a5.json  (+52 more)
ctrnn_training/: __init__.py  (+11 more)
(+338 files in other folders)
