[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pruning-benchmark"
version = "0.1.0"
description = "Efficient RNN pruning benchmark"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
include = ["pruning_benchmark*"]
